--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
             </mat-form-field>
             <mat-checkbox>Recuerdame</mat-checkbox>
             <button mat-raised-button color="primary" class="col-12 mt-2"
-            >Sign in</button>
+            >Iniciat sesión</button>
             <div class="col-12 row mt-3">
                 <span class="col-6 recordar" (click)="openRemember()">¿Olvidaste tu contraseña?</span>
                 <div class="col-6" style="text-align: right;">
