Conexion back register,login,recovery

--- a/src/app/auth/recordar-pass/recordar-pass.component.html
+++ b/src/app/auth/recordar-pass/recordar-pass.component.html
@@ -5,6 +5,6 @@
         <input matInput [(ngModel)]="email">
     </mat-form-field>
     <div class="col-12" style="text-align: center;">
-        <button mat-raised-button color="primary">Restaurar contraseña</button>
+        <button mat-raised-button color="primary" (click)="recovery()">Restaurar contraseña</button>
     </div>
 </div>
