--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,6 +41,36 @@
             <mat-select>
                 <mat-option></mat-option>
             </mat-select>
-        </mat-form-field>             
+        </mat-form-field>      
+        <mat-form-field appearance="outline" class="col-6">
+            <mat-label>Estado civil</mat-label>
+            <mat-select>
+                <mat-option></mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="col-6">
+            <mat-label>Nivel Academico</mat-label>
+            <mat-select>
+                <mat-option></mat-option>
+            </mat-select>
+        </mat-form-field>    
+        <mat-form-field appearance="outline" class="col-6">
+            <mat-label>Estado Laboral</mat-label>
+            <mat-select>
+                <mat-option></mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="col-6">
+            <mat-label>Nivel de ingresos</mat-label>
+            <mat-select>
+                <mat-option></mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="col-6">
+            <mat-label>Forma de pago</mat-label>
+            <mat-select>
+                <mat-option></mat-option>
+            </mat-select>
+        </mat-form-field> 
     </form>
 </div>
