--- a/src/app/auth/registrarse/registrarse.component.html
+++ b/src/app/auth/registrarse/registrarse.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content class="content-dialog">
-    <h2>Sign up</h2>
+    <h2>Registro</h2>
     <form [formGroup]="registerForm">
         <mat-form-field class="col-12 mb-2" appearance="outline">
             <mat-label>Nombres</mat-label>
@@ -52,8 +52,8 @@
                 <mat-icon>{{confirma ?  'visibility_off' : 'visibility'}}</mat-icon>
             </a>
         </mat-form-field>
-        <mat-checkbox class="mb-3">
-            <p> Deseo recibir información acerca de las encuestas en
+        <mat-checkbox class="col-12">
+            <p class="text-start text-wrap"> Deseo recibir información acerca de las encuestas en
                 las que soy candidato para participar mediante correo 
                 electrónico
             </p>
