--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,76 +1,93 @@
-<div class="container">
-    <form>
+<div class="container text-center mt-5">
+    <h1>Perfil</h1>
+    <form [formGroup]="profileForm">
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Tipo de documento</mat-label>
             <mat-select>
-                <mat-option></mat-option>
+                <mat-option>.......</mat-option>
+                <mat-option value="cc">Cédula de ciudadanía</mat-option>
+                <mat-option value="ce">Cédula de extranjería</mat-option>
+                <mat-option value="pp">Pasaporte</mat-option>
+                <mat-option value="ti">Tarjeta de identidad</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Número de documento</mat-label>
-            <input type="number">
+            <input type="number" matInput  formControlName="nit">
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Dirección</mat-label>
-            <input type="text">
+            <input type="text" matInput formControlName="address">
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Barrio</mat-label>
-            <input type="text">
+            <input type="text" matInput formControlName="neighborhood">
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Fecha de nacimiento</mat-label>
-            <input matInput [matDatepicker]="nacimiento">
+            <input matInput [matDatepicker]="nacimiento" formControlName="date_birth">
             <mat-datepicker-toggle matSuffix [for]="nacimiento"></mat-datepicker-toggle>
             <mat-datepicker #nacimiento></mat-datepicker>
           </mat-form-field>
           <mat-form-field appearance="outline" class="col-6">
             <mat-label>Estrato</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="socio_economic_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let estrato of estratos" [value]="estrato.id">{{estrato.description}}</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Género</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="gender_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let genero of generos" [value]="genero.id">{{genero.description}}</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Decisor de compra</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="purchase_decision_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let decisor of decisores" [value]="decisor.id">{{decisor.description}}</mat-option>
             </mat-select>
         </mat-form-field>      
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Estado civil</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="marital_status_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let estado of estados" [value]="estado.id">{{estado.description}}</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Nivel Academico</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="academic_level_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let nivel of lvl_academicos" [value]="nivel.id">{{nivel.description}}</mat-option>
             </mat-select>
         </mat-form-field>    
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Estado Laboral</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="employment_status_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let estado of est_laborales" [value]="estado.id">{{estado.description}}</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Nivel de ingresos</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="income_level_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let nivel of lvl_ingresos" [value]="nivel.id">{{nivel.description}}</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Forma de pago</mat-label>
-            <mat-select>
-                <mat-option></mat-option>
+            <mat-select formControlName="way_to_pay_id">
+                <mat-option>--------------</mat-option>
+                <mat-option *ngFor="let pago of pagos" [value]="pago.id">{{pago.description}}</mat-option>
             </mat-select>
         </mat-form-field> 
     </form>
+    <div class="col-12">
+        <button mat-stroked-button color="primary" class="col-6">Cancelar</button>
+        <button mat-raised-button color="primary" class="col-6">Continuar</button>
+    </div>
 </div>
