--- a/src/app/auth/recovery/recovery.component.html
+++ b/src/app/auth/recovery/recovery.component.html
@@ -1,17 +1,31 @@
-<form [formGroup]="recoveryForm">
-    <mat-form-field class="col-12 mb-1" appearance="outline">
-        <mat-label>Nueva contraseña</mat-label>
-        <input [type]="nueva ? 'password' : 'text'" matInput formControlName="new_password">
-        <a mat-icon-button matSuffix (click)="nueva = !nueva" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="nueva">
-            <mat-icon>{{nueva ?  'visibility_off' : 'visibility'}}</mat-icon>
-        </a>
-    </mat-form-field>
-    <mat-form-field class="col-12 mb-1" appearance="outline">
-        <mat-label>Confirma la contraseña</mat-label>
-        <input [type]="confirma ? 'password' : 'text'" matInput formControlName="confirma">
-        <a mat-icon-button matSuffix (click)="confirma = !confirma" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="confirma">
-            <mat-icon>{{confirma ?  'visibility_off' : 'visibility'}}</mat-icon>
-        </a>
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="sendPassword()">Restaurar contraseña</button>
-</form>
+<mat-card>
+    <form [formGroup]="recoveryForm">
+        <mat-form-field class="col-12 mb-1" appearance="outline">
+            <mat-label>Nueva contraseña</mat-label>
+            <input [type]="nueva ? 'password' : 'text'" matInput formControlName="new_password">
+            <a mat-icon-button matSuffix (click)="nueva = !nueva" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="nueva">
+                <mat-icon>{{nueva ?  'visibility_off' : 'visibility'}}</mat-icon>
+            </a>
+            <mat-error *ngIf="error.new_password.errors"><span *ngIf="error.new_password.errors.hasNumber">Su contraseña debe tener un número</span></mat-error>
+            <mat-error *ngIf="error.new_password.errors"><span *ngIf="error.new_password.errors.hasCapitalCase">Su contraseña debe tener una mayuscula</span></mat-error>
+            <mat-error *ngIf="error.new_password.errors"><span *ngIf="error.new_password.errors.hasSmallCase">Su contraseña debe tener una minuscula</span></mat-error>
+            <mat-error *ngIf="error.new_password.errors"><span *ngIf="error.new_password.errors.hasSpecialCharacters">Su contraseña debe tener un caracter especial</span></mat-error>
+            <mat-error *ngIf="error.new_password.errors"><span *ngIf="error.new_password.errors.required">¡Advertencia! Este campo es requerido</span></mat-error>
+        </mat-form-field>
+        <mat-form-field class="col-12 mb-1" appearance="outline">
+            <mat-label>Confirma la contraseña</mat-label>
+            <input [type]="confirma ? 'password' : 'text'" matInput formControlName="confirma">
+            <a mat-icon-button matSuffix (click)="confirma = !confirma" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="confirma">
+                <mat-icon>{{confirma ?  'visibility_off' : 'visibility'}}</mat-icon>
+            </a>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="error.confirma.errors.hasNumber">Su contraseña debe tener un número</span></mat-error>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="error.confirma.errors.hasCapitalCase">Su contraseña debe tener una mayuscula</span></mat-error>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="error.confirma.errors.hasSmallCase">Su contraseña debe tener una minuscula</span></mat-error>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="error.confirma.errors.hasSpecialCharacters">Su contraseña debe tener un caracter especial</span></mat-error>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="error.confirma.errors.required">¡Advertencia! Este campo es requerido</span></mat-error>
+            <mat-error *ngIf="error.confirma.errors"><span *ngIf="!error.confirma.errors.isMatching">Su contraseña no es igual a la ingresada previamente</span>
+            </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" (click)="sendPassword()">Restaurar contraseña</button>
+    </form>
+</mat-card>
