Login completo y proteccion de rutas

--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -4,12 +4,12 @@
     <h1>User</h1>
     <mat-nav-list class="menu">
         
-        <a mat-list-item [routerLink]="['/panel-why/pagos']" routerLinkActive="activo" >
-            <i class="fi-rr-stats" style="margin-right: 1rem;"></i> Pagos
+        <a mat-list-item [routerLink]="['/panel-why/dashborad']" routerLinkActive="activo">
+            <i class="fi-rr-bank" style="margin-right: 1rem;"></i> Dashboard
         </a>
 
-        <a mat-list-item [routerLink]="['/cartera/obligaciones']" routerLinkActive="activo">
-            <i class="fi-rr-bank" style="margin-right: 1rem;"></i> Mis obligaciones
+        <a mat-list-item [routerLink]="['/panel-why/pagos']" routerLinkActive="activo" >
+            <i class="fi-rr-stats" style="margin-right: 1rem;"></i> Pagos
         </a>
 
         <a mat-list-item [routerLink]="['/cartera/simulador']" routerLinkActive="activo">
@@ -20,10 +20,9 @@
             <i class="fi-rr-dollar" style="margin-right: 1rem;"></i> Pago en línea
         </a>
         
-        <a mat-list-item [routerLink]="['/cartera/pago-linea']" routerLinkActive="activo" id="sing-out" style="margin-top: 7.2em;"
-        >
+        <a mat-list-item [routerLink]="['/cartera/pago-linea']" routerLinkActive="activo" id="sing-out">
             <i class="fi-rr-sign-out" style="margin-right: 1rem;"></i> Cerrar sesión
         </a>
-    </mat-nav-list>
-    
+
+    </mat-nav-list> 
 </div>
