--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -4,20 +4,20 @@
     <h1>User</h1>
     <mat-nav-list class="menu">
         
-        <a mat-list-item [routerLink]="['/panel-why/dashborad']" routerLinkActive="activo">
+        <a mat-list-item [routerLink]="['/panel-why/dashboard']" routerLinkActive="activo">
             <i class="fi-rr-bank" style="margin-right: 1rem;"></i> Dashboard
+        </a>
+
+        <a mat-list-item [routerLink]="['/panel-why/perfil']" routerLinkActive="activo">
+            <i class="fi-rr-calculator" style="margin-right: 1rem;"></i> Perfil
         </a>
 
         <a mat-list-item [routerLink]="['/panel-why/pagos']" routerLinkActive="activo" >
             <i class="fi-rr-stats" style="margin-right: 1rem;"></i> Pagos
         </a>
 
-        <a mat-list-item [routerLink]="['/cartera/simulador']" routerLinkActive="activo">
-            <i class="fi-rr-calculator" style="margin-right: 1rem;"></i> Simulador
-        </a>
-
-        <a mat-list-item [routerLink]="['/cartera/pago-linea']" routerLinkActive="activo">
-            <i class="fi-rr-dollar" style="margin-right: 1rem;"></i> Pago en línea
+        <a mat-list-item [routerLink]="['/panel-why/puntos']" routerLinkActive="activo">
+            <i class="fi-rr-dollar" style="margin-right: 1rem;"></i> Puntos
         </a>
         
         <a mat-list-item [routerLink]="['/cartera/pago-linea']" routerLinkActive="activo" id="sing-out">
