--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav mt-5">
     <img src="" alt="" height="128px" width="128px">
     <h3 class="mt-5">¡Bienvenido de vuelta!</h3>
-    <h1>User</h1>
+    <h2>Puntos: {{actual | number}}</h2>
     <mat-nav-list class="menu">
         
         <a mat-list-item [routerLink]="['/panel-why/dashboard']" routerLinkActive="activo">
