--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -25,7 +25,7 @@
 
         <ng-container matColumnDef="date_payed">
             <th mat-header-cell *matHeaderCellDef> Fecha de pago </th>
-            <td mat-cell *matCellDef="let element"> {{element.date_payed | date:'DD/MM/YYYY'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.date_payed | date:'dd/MM/YYYY'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="transaction_type">
