--- a/src/app/panel-why/modules/dashboard/dashboard.component.html
+++ b/src/app/panel-why/modules/dashboard/dashboard.component.html
@@ -1,13 +1,20 @@
 <div class="row col-12">
     <mat-card class="example-card">
         <mat-card-header>
+            <mat-card-title>Puntos actuales</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-card-subtitle>{{actuales | number}}</mat-card-subtitle>
+        </mat-card-content>
+      </mat-card>
+      <mat-card class="example-card">
+        <mat-card-header>
             <mat-card-title>Puntos totales</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <mat-card-subtitle>{{total | number}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
-    
       <mat-card class="example-card">
         <mat-card-header>
             <mat-card-title>Puntos a redimir</mat-card-title>
@@ -23,7 +30,7 @@
             <mat-card-title>Valor</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <mat-card-subtitle>{{valor | number}}</mat-card-subtitle>
+            <mat-card-subtitle>{{valor | currency:'':'symbol':'1.0'}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
 </div>
