--- a/src/app/panel-why/side-nav/side-nav.component.scss
+++ b/src/app/panel-why/side-nav/side-nav.component.scss
@@ -3,6 +3,10 @@ mat-sidenav-container{
     height: 100%;
 }
 
+mat-sidenav{
+    padding-left: 2em;
+}
+
 .content{
     margin-top: 3em;
     margin-left: 3em;
