--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,13 +3,14 @@
     <form [formGroup]="profileForm">
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Tipo de documento</mat-label>
-            <mat-select>
+            <mat-select formControlName="society_nit_type_id">
                 <mat-option>.......</mat-option>
                 <mat-option value="cc">Cédula de ciudadanía</mat-option>
                 <mat-option value="ce">Cédula de extranjería</mat-option>
                 <mat-option value="pp">Pasaporte</mat-option>
                 <mat-option value="ti">Tarjeta de identidad</mat-option>
             </mat-select>
+            <mat-error *ngIf="profileForm.get('society_nit_type_id').hasError('required')">Por favor selecciona una opción</mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-6">
             <mat-label>Número de documento</mat-label>
